# advent-of-code

./: .coveragerc  .flake8  .gitignore  .pylintrc  .ruff.toml  Makefile  README.md  durations.json  durations.md  pyproject.toml  sonar-project.properties
2022/: day1.py  day1_test.py  day2_test.py  day3.py  day3_test.py  day4_test.py  day5_test.py
2023/: day1.py  day10.py  day10_test.py  day11_test.py  day12_test.py  day13.py  day13_test.py  day14_test.py  day15_test.py  day16_test.py  day17.py  day17_test.py  day18.py  day18_test.py  day19.py  day19_test.py  day1_test.py  day2.py  day20_test.py  day21.py  day21_test.py  day2_test.py  day3.py  day3_test.py  day4_test.py  day5.py  day5_test.py  day6.py  day6_test.py  day7.py  day7_test.py  day8_test.py  day9.py  day9_test.py
aoc/: __init__.py  graphs.py  grids.py  heaps.py  ranges.py
aoc/_2022/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py
aoc/_2023/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
aoc/_2024/: day3.py
scripts/: durations_to_md.py  uv_bump.py
src/aoc/: __init__.py  graphs.py  grids.py  heaps.py  matrix.py  ranges.py
src/aoc/_2022/: day3.py  day5.py  day7.py  day8.py
src/aoc/_2023/: day10.py  day11.py  day12.py  day14.py  day15.py  day16.py  day17.py  day19.py  day2.py  (+12 more)
test/: __init__.py  conftest.py
test/2022/: test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py
test/2023/: test_day1.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day19.py  test_day2.py  test_day20.py  test_day21.py  test_day22.py  test_day23.py  test_day24.py  test_day25.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
test/2024/: test_day1.py  test_day10.py  test_day11.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
test/2025/: test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py
(+15 files in other folders)
