[project]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of Code Solutions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pylint>=3.3.2",
    "pyright>=1.1.389",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.4",
    "ruff>=0.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aoc"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--import-mode importlib"

[tool.pyright]
reportReturnType = false
