[project]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of Code Solutions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "more-itertools>=10.8.0",
    "networkx>=3.6.1",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "pylint>=4.0.4",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.8",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "aoc"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--import-mode importlib -m 'not slow'"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.pyright]
reportReturnType = false
